crates/ddlog-syntax/tests/parse/pass/binary_number.dl
// kind:expr validate:false pass:true ignore:false
0b010101
