crates/ddlog-syntax/tests/parse/fail/unclosed_paren.dl
// kind:expr validate:false pass:false ignore:false
(((100))
